--- a/package.json
+++ b/package.json
@@ -4,14 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "watch": "webpack --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
+    "css-loader": "^5.0.1",
     "express": "^4.17.1",
     "node-static": "^0.7.11",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.5",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^5.10.1"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^4.5.0",
+    "webpack-cli": "^4.2.0"
   }
 }
